<resources>
    <string name="app_name">FallDetectionSMS</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="enter_name">Name</string>
    <string name="enter_surname">Surname</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="heart_problems">Heart Disease</string>
    <string name="epilepsy">Epilepsy</string>
    <string name="parkinson">Parkinson\'s Disease</string>
    <string name="alzheimer">Alzheimer\'s Disease</string>
    <string name="other">Other</string>
    <string name="helth_problems">Health Problems</string>
    <string name="profile">Profile</string>
    <string name="contacts">Contacts</string>
    <string name="medicine">Medicine</string>
    <string name="add_contact">Click here and add contact</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_monitor">Start Monitoring</string>
    <string name="are_you_ok">Are You Ok?</string>
    <string name="i_am_ok">I\'m ok</string>
    <string name="call_for_help">Call for help</string>
    <string name="fall_detected">We detected your device falling</string>
    <string name="title_activity_read_accel_data">ReadAccelData</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="preference_file_key">myprefs</string>
    <string name="disease">Disease</string>
    <string name="name">name</string>
    <string name="surname">surname</string>
    <string name="please_help">Please Help</string>
    <string name="add_contact_button_text">Add Contact</string>
    <string name="call">call</string>
    <string name="personal_details">Personal Details</string>
    <string name="health_details">Health Details</string>
</resources>
