<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:gravity="center"-->
            <!--android:text="@string/helth_problems" />-->

        <RadioGroup

            android:id="@+id/diseases"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <RadioButton
                android:id="@+id/radio_heart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/heart_problems" />

            <RadioButton
                android:id="@+id/radio_epilepsy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/epilepsy" />

            <RadioButton
                android:id="@+id/radio_parkinson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parkinson" />

            <RadioButton
                android:id="@+id/radio_alzheimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alzheimer" />

            <RadioButton
                android:id="@+id/radio_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other" />
        </RadioGroup>
    </LinearLayout>

    <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_weight="4"-->
        <!--android:background="@color/primary_dark">-->
        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textColor="@color/background"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:text="Hints will be here"/>-->
    <!--</RelativeLayout>-->
</LinearLayout>